Info block - full adaptive.

--- a/dest/index.html
+++ b/dest/index.html
@@ -79,6 +79,7 @@
         </div>
       </section>
       <!-- INFO :: END-->
+      <div class="line"></div>
     </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
