--- a/dest/index.html
+++ b/dest/index.html
@@ -39,7 +39,38 @@
     <!-- HEADER :: START-->
     <header class="header" id="header">
       <div class="c-grid">
-        <div class="header__wrapper"></div>
+        <div class="header__wrapper">
+          <div class="header__wrapper-left">
+            <div class="logo logo--header"><a class="logo__link" href="/" title=""><img class="logo__img" srcset="./img/img-logo.png, ./img/img-logo@2x.png" alt="" title=""/></a></div>
+            <div class="hamburger hamburger--squeeze" role="button" hamburger-js="hamburger-js">
+              <div class="hamburger-box">
+                <div class="hamburger-inner"></div>
+              </div>
+            </div>
+          </div>
+          <div class="header__wrapper-right" mobile-block-js>
+            <nav class="nav nav--header">
+              <ul class="nav__list">
+                <li class="nav__item nav__item-0 nav__item-icon-nav-0"><a class="nav__link is-active nav__link-0" href="#" title="">
+                    <div class="nav__link-icon"><i class="icon-png icon-nav-0"></i></div><span class="nav__link-text">Podnoszenie mocy</span></a></li>
+                <li class="nav__item nav__item-1 nav__item-icon-nav-0"><a class="nav__link nav__link-1" href="#" title="">
+                    <div class="nav__link-icon"><i class="icon-png icon-nav-0"></i></div><span class="nav__link-text">Wydech</span></a></li>
+                <li class="nav__item nav__item-2 nav__item-icon-nav-0"><a class="nav__link nav__link-2" href="#" title="">
+                    <div class="nav__link-icon"><i class="icon-png icon-nav-0"></i></div><span class="nav__link-text">Wyglad</span></a></li>
+                <li class="nav__item nav__item-3 nav__item-icon-nav-0"><a class="nav__link nav__link-3" href="#" title="">
+                    <div class="nav__link-icon"><i class="icon-png icon-nav-0"></i></div><span class="nav__link-text">Zawieszenie</span></a></li>
+                <li class="nav__item nav__item-4 nav__item-icon-nav-0"><a class="nav__link nav__link-4" href="#" title="">
+                    <div class="nav__link-icon"><i class="icon-png icon-nav-0"></i></div><span class="nav__link-text">Detailing i folie</span></a></li>
+                <li class="nav__item nav__item-5 nav__item-icon-nav-0"><a class="nav__link nav__link-5" href="#" title="">
+                    <div class="nav__link-icon"><i class="icon-png icon-nav-0"></i></div><span class="nav__link-text">Wypożyczalnia</span></a></li>
+                <li class="nav__item nav__item-6 nav__item-icon-nav-0"><a class="nav__link nav__link-6" href="#" title="">
+                    <div class="nav__link-icon"><i class="icon-png icon-nav-0"></i></div><span class="nav__link-text">Serwis premium</span></a></li>
+                <li class="nav__item nav__item-7 nav__item-icon-nav-1"><a class="nav__link nav__link-7" href="#" title="">
+                    <div class="nav__link-icon"><i class="icon-png icon-nav-1"></i></div><span class="nav__link-text">Kontakt</span></a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
     </header>
     <!-- HEADER :: END-->
