Create main section - w\ adaptive.

--- a/dest/index.html
+++ b/dest/index.html
@@ -77,8 +77,67 @@
     <div class="body body--start home">
       <!-- MAIN :: START-->
       <section class="main" id="main">
+        <div class="main__bg"></div>
         <div class="c-grid">
-          <div class="main__wrapper"></div>
+          <div class="main__wrapper">
+            <div class="main__wrapper-left">
+              <h1 class="main__title">Jaki masz samochód?</h1>
+              <p class="main__subtitle">Pokażemy Ci co możemy z nim zrobić!</p>
+              <form class="c-form" action="" method="">
+                <div class="c-form__group c-form__group--select">
+                  <div class="c-form__group-col c-form__group-col-0">
+                    <div class="c-form__field c-form__field--select">
+                      <div class="c-form__select-wrap">
+                        <div class="c-form__select"><span class="c-form__select-value"></span>
+                          <select name="">
+                            <option value="0" disabled selected hidden>Marka</option>
+                            <option value="1">Marka</option>
+                            <option value="1">Marka</option>
+                            <option value="1">Marka</option>
+                            <option value="1">Marka</option>
+                            <option value="1">Marka</option>
+                          </select><span class="c-form__select-icon-wrap"><i class="c-form__select-icon">↓</i></span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="c-form__group-col c-form__group-col-1">
+                    <div class="c-form__field c-form__field--select">
+                      <div class="c-form__select-wrap">
+                        <div class="c-form__select"><span class="c-form__select-value"></span>
+                          <select name="">
+                            <option value="0" disabled selected hidden>Model</option>
+                            <option value="1">Model</option>
+                            <option value="1">Model</option>
+                            <option value="1">Model</option>
+                            <option value="1">Model</option>
+                            <option value="1">Model</option>
+                          </select><span class="c-form__select-icon-wrap"><i class="c-form__select-icon">↓</i></span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="c-form__group-col c-form__group-col-2">
+                    <div class="c-form__field c-form__field--select">
+                      <div class="c-form__select-wrap">
+                        <div class="c-form__select"><span class="c-form__select-value"></span>
+                          <select name="">
+                            <option value="0" disabled selected hidden>Silnik</option>
+                            <option value="1">Silnik</option>
+                            <option value="1">Silnik</option>
+                            <option value="1">Silnik</option>
+                            <option value="1">Silnik</option>
+                            <option value="1">Silnik</option>
+                          </select><span class="c-form__select-icon-wrap"><i class="c-form__select-icon">↓</i></span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="main__wrapper-right"><img src="./img/img-car-main.png" srcset="" alt="" title=""></div>
+          </div>
         </div>
       </section>
       <!-- MAIN :: END-->
