--- a/dest/404.html
+++ b/dest/404.html
@@ -94,6 +94,7 @@
     <!-- FOOTER :: END-->
   </body>
   <!-- SCRIPT :: START-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIbEk7W2kX53Upp7c0rROppSIDGjFyPew"></script>
   <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
   <!-- SCRIPT :: END-->
