--- a/dest/contacts.html
+++ b/dest/contacts.html
@@ -74,7 +74,82 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body body--start contacts"></div>
+    <div class="body body--start contacts">
+      <section class="contact" id="contact">
+        <div class="contact__bg"></div>
+        <div class="c-grid">
+          <div class="contact__wrapper">
+            <div class="contact__row contact__row-0">
+              <h1 class="contact__title">Skontaktuj się z Nami</h1>
+            </div>
+            <div class="contact__row contact__row-1">
+              <div class="contact__row-left"><a class="contact__col contact__col-0" href="tel:+48221855911">
+                  <div class="contact__col-img"><img src="./img/img-contacts-0.png" srcset="./img/img-contacts-0@2x.png 2x" alt="" title=""></div>
+                  <div class="contact__col-text">
+                    <p>+48 22 1855 911</p><span>Dzwoń codziennie w godzinach 10:00-18:00!</span>
+                  </div></a><a class="contact__col contact__col-1" href="mailto:info@hpfactory.pl">
+                  <div class="contact__col-img"><img src="./img/img-contacts-1.png" srcset="./img/img-contacts-1@2x.png 2x" alt="" title=""></div>
+                  <div class="contact__col-text">
+                    <p>info@hpfactory.pl</p><span>Pisz codziennie o każdej porze!</span>
+                  </div></a></div>
+              <div class="contact__row-right"><img src="./img/img-phone.png" srcset="" alt="" title=""></div>
+            </div>
+            <div class="contact__row contact__row-2">
+              <p class="contact__subtitle">lub zostaw dla Nas wiadomość i kontakt!</p>
+            </div>
+            <div class="contact__row contact__row-3">
+              <div class="contact__row-left">
+                <div>
+                  <form class="c-form">
+                    <div class="c-form__group c-form__group--input">
+                      <div class="c-form__group-col c-form__group-col-0">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Twoje imię*">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-1">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Twój telefon">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-2">
+                        <div class="c-form__field c-form__field--input">
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="text" name="" placeholder="Twój e-mail*">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="c-form__field c-form__field--textarea">
+                      <div class="c-form__textarea-wrapper">
+                        <textarea class="c-form__textarea" name="" placeholder="Wiadomość*"></textarea>
+                      </div>
+                    </div>
+                    <div class="c-form__field c-form__field--btn">
+                      <button class="c-form__btn" type="submit">Wyślij</button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="contact__row-right">
+                <div>
+                  <div class="contact__map">
+                    <div id="map"></div>
+                  </div>
+                  <div class="contact__map-info">
+                    <p>ul. Joliot-Curie 26/19, Warszawa</p><i class="icon-png label-contact"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
@@ -84,6 +159,7 @@
     <!-- FOOTER :: END-->
   </body>
   <!-- SCRIPT :: START-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIbEk7W2kX53Upp7c0rROppSIDGjFyPew"></script>
   <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
   <!-- SCRIPT :: END-->
