Add btn and form elem hover, focus, active.

--- a/dest/contacts.html
+++ b/dest/contacts.html
@@ -105,28 +105,28 @@
                       <div class="c-form__group-col c-form__group-col-0">
                         <div class="c-form__field c-form__field--input">
                           <div class="c-form__input-wrapper">
-                            <input class="c-form__input" type="text" name="" placeholder="Twoje imię*">
+                            <input class="c-form__input" type="text" name="" placeholder="Twoje imię*" form-focus-js>
                           </div>
                         </div>
                       </div>
                       <div class="c-form__group-col c-form__group-col-1">
                         <div class="c-form__field c-form__field--input">
                           <div class="c-form__input-wrapper">
-                            <input class="c-form__input" type="text" name="" placeholder="Twój telefon">
+                            <input class="c-form__input" type="text" name="" placeholder="Twój telefon" form-focus-js>
                           </div>
                         </div>
                       </div>
                       <div class="c-form__group-col c-form__group-col-2">
                         <div class="c-form__field c-form__field--input">
                           <div class="c-form__input-wrapper">
-                            <input class="c-form__input" type="text" name="" placeholder="Twój e-mail*">
+                            <input class="c-form__input" type="text" name="" placeholder="Twój e-mail*" form-focus-js>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="c-form__field c-form__field--textarea">
                       <div class="c-form__textarea-wrapper">
-                        <textarea class="c-form__textarea" name="" placeholder="Wiadomość*"></textarea>
+                        <textarea class="c-form__textarea" name="" placeholder="Wiadomość*" form-focus-js></textarea>
                       </div>
                     </div>
                     <div class="c-form__field c-form__field--btn">
