Change logic for select.

--- a/dest/index.html
+++ b/dest/index.html
@@ -88,48 +88,39 @@
                   <div class="c-form__group-col c-form__group-col-0">
                     <div class="c-form__field c-form__field--select">
                       <div class="c-form__select-wrap">
-                        <div class="c-form__select"><span class="c-form__select-value"></span>
-                          <select name="">
-                            <option value="0" disabled selected hidden>Marka</option>
-                            <option value="1">Marka</option>
-                            <option value="1">Marka</option>
-                            <option value="1">Marka</option>
-                            <option value="1">Marka</option>
-                            <option value="1">Marka</option>
-                          </select><span class="c-form__select-icon-wrap"><i class="c-form__select-icon">↓</i></span>
-                        </div>
+                        <select name="" select-js>
+                          <option value="1">Marka</option>
+                          <option value="1">Marka</option>
+                          <option value="1">Marka</option>
+                          <option value="1">Marka</option>
+                          <option value="1">Marka</option>
+                        </select>
                       </div>
                     </div>
                   </div>
                   <div class="c-form__group-col c-form__group-col-1">
                     <div class="c-form__field c-form__field--select">
                       <div class="c-form__select-wrap">
-                        <div class="c-form__select"><span class="c-form__select-value"></span>
-                          <select name="">
-                            <option value="0" disabled selected hidden>Model</option>
-                            <option value="1">Model</option>
-                            <option value="1">Model</option>
-                            <option value="1">Model</option>
-                            <option value="1">Model</option>
-                            <option value="1">Model</option>
-                          </select><span class="c-form__select-icon-wrap"><i class="c-form__select-icon">↓</i></span>
-                        </div>
+                        <select name="" select-js>
+                          <option value="1">Model</option>
+                          <option value="1">Model</option>
+                          <option value="1">Model</option>
+                          <option value="1">Model</option>
+                          <option value="1">Model</option>
+                        </select>
                       </div>
                     </div>
                   </div>
                   <div class="c-form__group-col c-form__group-col-2">
                     <div class="c-form__field c-form__field--select">
                       <div class="c-form__select-wrap">
-                        <div class="c-form__select"><span class="c-form__select-value"></span>
-                          <select name="">
-                            <option value="0" disabled selected hidden>Silnik</option>
-                            <option value="1">Silnik</option>
-                            <option value="1">Silnik</option>
-                            <option value="1">Silnik</option>
-                            <option value="1">Silnik</option>
-                            <option value="1">Silnik</option>
-                          </select><span class="c-form__select-icon-wrap"><i class="c-form__select-icon">↓</i></span>
-                        </div>
+                        <select name="" select-js>
+                          <option value="1">Silnik</option>
+                          <option value="1">Silnik</option>
+                          <option value="1">Silnik</option>
+                          <option value="1">Silnik</option>
+                          <option value="1">Silnik</option>
+                        </select>
                       </div>
                     </div>
                   </div>
