Search page - create product section - w\ adaptive.

--- a/dest/contacts.html
+++ b/dest/contacts.html
@@ -75,6 +75,7 @@
     </header>
     <!-- HEADER :: END-->
     <div class="body body--start contacts">
+      <!-- CONTACT :: START-->
       <section class="contact" id="contact">
         <div class="contact__bg"></div>
         <div class="c-grid">
@@ -149,6 +150,7 @@
           </div>
         </div>
       </section>
+      <!-- CONTACT :: END-->
     </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
