Search page - create base section - w\ adaptive.

--- a/dest/search.html
+++ b/dest/search.html
@@ -75,6 +75,150 @@
     </header>
     <!-- HEADER :: END-->
     <div class="body body--start search-page">
+      <!-- BASE :: START-->
+      <section class="base" id="base">
+        <div class="base__bg"></div>
+        <div class="c-grid">
+          <div class="base__wrapper">
+            <div class="base__row base__row-0">
+              <div class="base__pagination"><a class="base__pagination-btn" href="#" title="">← Wróć do strony głównej</a><a class="base__pagination-btn" href="#" title="">Zmień wybór</a></div>
+            </div>
+            <div class="base__row base__row-1">
+              <div class="base__title">
+                <div class="base__title-left">
+                  <p>Porsche Panamera 4S E-Hybrid 432KM</p>
+                  <hr>
+                </div>
+                <div class="base__title-right"><img src="./img/img-base-title.png" srcset="./img/img-base-title@2x.png 2x" alt="" title=""></div>
+              </div>
+            </div>
+            <div class="base__row base__row-2">
+              <div class="base__box">
+                <div class="base__box-head">
+                  <div>
+                    <p>Wybierz wersję produktu:</p>
+                  </div>
+                  <div>
+                    <div><a href="#" title="">PowerControl</a><a href="#" title="">PowerControl X</a></div>
+                    <p><i class="icon-png product-head"></i>Bez utraty gwarancji
+                    </p>
+                  </div>
+                </div>
+                <div class="base__box-body">
+                  <div><img src="./img/img-base-main.png" srcset="./img/img-base-main@2x.png 2x" alt="" title=""></div>
+                  <div>
+                    <div class="base__table">
+                      <table>
+                        <thead>
+                          <tr>
+                            <th></th>
+                            <th>Dane seryjne</th>
+                            <th>Dane po tuningu</th>
+                            <th>Przyrost</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td><img src="./img/img-base-table-0.png" srcset="./img/img-base-table-0@2x.png 2x" alt="" title="">Moc silnika
+                            </td>
+                            <td>106 KM</td>
+                            <td>136 KM</td>
+                            <td class="orange">+31 KM</td>
+                          </tr>
+                          <tr>
+                            <td><img src="./img/img-base-table-1.png" srcset="./img/img-base-table-1@2x.png 2x" alt="" title="">Moment obrotowy
+                            </td>
+                            <td>255 KM</td>
+                            <td>290 KM</td>
+                            <td class="red">+35 Nm</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                    <hr>
+                    <div><a href="#" title="">Kliknij, aby dowiedzieć się więcej</a><a href="#" title="">Przyrost na podstawie badań EWG 80/1269</a></div>
+                  </div>
+                </div>
+                <div class="base__box-footer">
+                  <p>Każdy zestaw PowerControl jest programowany, konfigurowany oraz kompletowany specjalnie pod Twoje zamówienie oraz dla Twojego modelu samochodu i silnika. Nie jest to produkt uniwersalny, dlatego koniecznie sprawdź, czy opracowaliśmy  wersję dla Twojego pojazdu! <a href='#'>Czytaj więcej...</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="base__row base__row-3">
+              <div class="base__list">
+                <ul>
+                  <li>
+                    <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
+                    <div>
+                      <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
+                    </div>
+                  </li>
+                  <li><i></i></li>
+                  <li>
+                    <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
+                    <div>
+                      <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
+                    </div>
+                  </li>
+                  <li><i></i></li>
+                  <li>
+                    <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
+                    <div>
+                      <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
+                    </div>
+                  </li>
+                  <li><i></i></li>
+                  <li>
+                    <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
+                    <div>
+                      <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
+                    </div>
+                  </li>
+                </ul>
+                <ul>
+                  <li>
+                    <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
+                    <div>
+                      <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
+                    </div>
+                  </li>
+                  <li><i></i></li>
+                  <li>
+                    <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
+                    <div>
+                      <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
+                    </div>
+                  </li>
+                  <li><i></i></li>
+                  <li>
+                    <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
+                    <div>
+                      <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
+                    </div>
+                  </li>
+                  <li><i></i></li>
+                  <li>
+                    <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
+                    <div>
+                      <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="base__row base__row-4">
+              <div class="base__price">
+                <hr>
+                <div>
+                  <p><span>cena brutto</span>2099,-</p>
+                </div>
+                <div><a class="base__box-link" href="#" title="">Umów sie na montaż ze strojeniem na hamowni</a><a class="base__box-btn" href="#" title="">Kup teraz</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- BASE :: END-->
       <div class="line"></div>
       <!-- PRODUCT :: START-->
       <section class="product" id="product">
