Search page - base section - full adaptive.

--- a/dest/search.html
+++ b/dest/search.html
@@ -153,21 +153,21 @@
                       <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
                     </div>
                   </li>
-                  <li><i></i></li>
+                  <li class="base__list-line"><i></i></li>
                   <li>
                     <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
                     <div>
                       <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
                     </div>
                   </li>
-                  <li><i></i></li>
+                  <li class="base__list-line"><i></i></li>
                   <li>
                     <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
                     <div>
                       <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
                     </div>
                   </li>
-                  <li><i></i></li>
+                  <li class="base__list-line"><i></i></li>
                   <li>
                     <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
                     <div>
@@ -182,21 +182,21 @@
                       <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
                     </div>
                   </li>
-                  <li><i></i></li>
+                  <li class="base__list-line"><i></i></li>
                   <li>
                     <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
                     <div>
                       <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
                     </div>
                   </li>
-                  <li><i></i></li>
+                  <li class="base__list-line"><i></i></li>
                   <li>
                     <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
                     <div>
                       <p>Nie tracisz gwarancji</p><span>modyfikacje bez utraty gwarancji</span>
                     </div>
                   </li>
-                  <li><i></i></li>
+                  <li class="base__list-line"><i></i></li>
                   <li>
                     <div><img src="./img/img-base-list.png" srcset="./img/img-base-list@2x.png 2x" alt="" title=""><img src="./img/img-base-list-h.png" srcset="./img/img-base-list-h@2x.png 2x" alt="" title=""></div>
                     <div>
