Fix edits - bg, mobile view.

--- a/dest/index.html
+++ b/dest/index.html
@@ -121,7 +121,7 @@
                     <div class="c-form__field c-form__field--select">
                       <div class="c-form__select-wrap">
                         <select name="" select-js>
-                          <option value="1">Marka</option>
+                          <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
                           <option value="1">Marka</option>
                           <option value="1">Marka</option>
                           <option value="1">Marka</option>
@@ -134,7 +134,7 @@
                     <div class="c-form__field c-form__field--select">
                       <div class="c-form__select-wrap">
                         <select name="" select-js>
-                          <option value="1">Model</option>
+                          <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
                           <option value="1">Model</option>
                           <option value="1">Model</option>
                           <option value="1">Model</option>
@@ -147,7 +147,7 @@
                     <div class="c-form__field c-form__field--select">
                       <div class="c-form__select-wrap">
                         <select name="" select-js>
-                          <option value="1">Silnik</option>
+                          <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
                           <option value="1">Silnik</option>
                           <option value="1">Silnik</option>
                           <option value="1">Silnik</option>
@@ -192,7 +192,6 @@
         </div>
       </section>
       <!-- INFO :: END-->
-      <div class="line"></div>
     </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
