Create footer - w\ adaptive.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- TITLE-->
-    <title>HP Factory - 404</title>
+    <title>HP Factory - Basket</title>
     <!-- FAVICON-->
     <link rel="apple-touch-icon" sizes="60x60" href="./icon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="./icon/apple-icon-72x72.png">
@@ -106,17 +106,7 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body not-found">
-      <section class="notFound" id="notFound">
-        <div class="notFound__bg"></div>
-        <div class="c-grid">
-          <div class="notFound__wrapper">
-            <div class="notFound__img-wrap"><img class="notFound__img" src="./img/img-notfound.png" srcset="" alt="" title=""></div>
-            <h2 class="notFound__message">Niestety, nie ma takiej strony.</h2>
-          </div>
-        </div>
-      </section>
-    </div>
+    <div class="body p-basket"></div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="footer__bar">
