--- a/dest/contacts.html
+++ b/dest/contacts.html
@@ -106,7 +106,7 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body body--start contacts">
+    <div class="body contacts">
       <!-- CONTACT :: START-->
       <section class="contact" id="contact">
         <div class="contact__bg"></div>
@@ -186,8 +186,55 @@
     </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
+      <div class="footer__bar">
+        <div class="c-grid">
+          <div class="footer__wrapper footer__wrapper-0">
+            <div class="footer__wrapper-left"><a class="contact__col contact__col-0" href="tel:+48221855911">
+                <div class="contact__col-img"><img src="./img/img-contacts-0.png" srcset="./img/img-contacts-0@2x.png 2x" alt="" title=""></div>
+                <div class="contact__col-text">
+                  <p>+48 22 1855 911</p><span>Dzwoń codziennie w godzinach 10:00-18:00!</span>
+                </div></a><a class="contact__col contact__col-1" href="mailto:info@hpfactory.pl">
+                <div class="contact__col-img"><img src="./img/img-contacts-1.png" srcset="./img/img-contacts-1@2x.png 2x" alt="" title=""></div>
+                <div class="contact__col-text">
+                  <p>info@hpfactory.pl</p><span>Pisz codziennie o każdej porze!</span>
+                </div></a></div>
+            <div class="footer__wrapper-middle">
+              <div class="social">
+                <ul class="social__list">
+                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-png fb"></i></a></li>
+                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-png yt"></i></a></li>
+                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-png in"></i></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer__wrapper-right"><img src="./img/img-footer-car.png" srcset="./img/img-footer-car@2x.png 2x" alt="" title=""></div>
+          </div>
+        </div>
+      </div>
       <div class="c-grid">
-        <div class="footer__wrapper"></div>
+        <div class="footer__wrapper footer__wrapper-1">
+          <div class="footer__wrapper-left">
+            <nav class="nav nav--footer">
+              <ul class="nav__list">
+                <li class="nav__item nav__item-0"><a class="nav__link nav__link-0" href="#" title="">Strona główna</a></li>
+                <li class="nav__item-empty"><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span></li>
+                <li class="nav__item nav__item-1"><a class="nav__link nav__link-1" href="#" title="">FAQ</a></li>
+                <li class="nav__item-empty"><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span></li>
+                <li class="nav__item nav__item-2"><a class="nav__link nav__link-2" href="#" title="">O nas</a></li>
+                <li class="nav__item-empty"><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span></li>
+                <li class="nav__item nav__item-3"><a class="nav__link nav__link-3" href="#" title="">Regulamin</a></li>
+                <li class="nav__item-empty"><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span></li>
+                <li class="nav__item nav__item-4"><a class="nav__link nav__link-4" href="#" title="">Kontakt</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__wrapper-right">
+            <div class="copyright">
+              <p>Copyright © HP Factory. All rights reserved. Wszelkie prawa zastrzeżone.</p><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span>
+              <div class="logo logo--footer"><a class="logo__link" href="/" title=""><img class="logo__img" srcset="./img/img-logo-footer.png, ./img/img-logo-footer@2x.png" alt="" title=""/></a></div>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- FOOTER :: END-->
