Create footer - full adaptive.

--- a/dest/index.html
+++ b/dest/index.html
@@ -210,9 +210,9 @@
             <div class="footer__wrapper-middle">
               <div class="social">
                 <ul class="social__list">
-                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-png fb"></i></a></li>
-                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-png yt"></i></a></li>
-                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-png in"></i></a></li>
+                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-facebook-logo"></i></a></li>
+                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-youtube-logo"></i></a></li>
+                  <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-instagram-logo"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -223,23 +223,30 @@
       <div class="c-grid">
         <div class="footer__wrapper footer__wrapper-1">
           <div class="footer__wrapper-left">
+            <div class="social">
+              <ul class="social__list">
+                <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-facebook-logo"></i></a></li>
+                <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-youtube-logo"></i></a></li>
+                <li class="social__item"><a class="social__link" href="#" title=""><i class="icon-font icon-instagram-logo"></i></a></li>
+              </ul>
+            </div>
             <nav class="nav nav--footer">
               <ul class="nav__list">
                 <li class="nav__item nav__item-0"><a class="nav__link nav__link-0" href="#" title="">Strona główna</a></li>
-                <li class="nav__item-empty"><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span></li>
+                <li class="nav__item-empty"><span>|</span></li>
                 <li class="nav__item nav__item-1"><a class="nav__link nav__link-1" href="#" title="">FAQ</a></li>
-                <li class="nav__item-empty"><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span></li>
+                <li class="nav__item-empty"><span>|</span></li>
                 <li class="nav__item nav__item-2"><a class="nav__link nav__link-2" href="#" title="">O nas</a></li>
-                <li class="nav__item-empty"><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span></li>
+                <li class="nav__item-empty"><span>|</span></li>
                 <li class="nav__item nav__item-3"><a class="nav__link nav__link-3" href="#" title="">Regulamin</a></li>
-                <li class="nav__item-empty"><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span></li>
+                <li class="nav__item-empty"><span>|</span></li>
                 <li class="nav__item nav__item-4"><a class="nav__link nav__link-4" href="#" title="">Kontakt</a></li>
               </ul>
             </nav>
           </div>
           <div class="footer__wrapper-right">
             <div class="copyright">
-              <p>Copyright © HP Factory. All rights reserved. Wszelkie prawa zastrzeżone.</p><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span>
+              <p>Copyright © HP Factory. <span>All rights reserved. Wszelkie prawa zastrzeżone.<span></p><span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span>
               <div class="logo logo--footer"><a class="logo__link" href="/" title=""><img class="logo__img" srcset="./img/img-logo-footer.png, ./img/img-logo-footer@2x.png" alt="" title=""/></a></div>
             </div>
           </div>
