Create about page - full adaptive.

--- a/dest/about.html
+++ b/dest/about.html
@@ -106,7 +106,38 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body p-about"></div>
+    <div class="body body--start p-about">
+      <section class="about" id="about">
+        <div class="about__bg"></div>
+        <div class="c-grid">
+          <div class="about__wrapper">
+            <h1 class="about__title">O nas</h1>
+            <div class="about__row about__row-0">
+              <div class="about__row-left">
+                <div class="about__img-wrapper"><img class="about__img" src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title=""></div>
+                <div class="about__img-wrapper"><img class="about__img" src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title=""></div>
+              </div>
+              <div class="about__row-right">
+                <p class="about__subtitle">HP Factory</p>
+                <p class="about__text">Firma HP Factory została założona przez pasjonatów motoryzacji, którzy całe swoje serce do samochodów wkładają w firmę, jej rozwój, a przede wszystkim obsługę klienta. Wywodzą się oni ze środowiska motorsportu, co powoduje, że znają tuning nawet z tej ekstremalnej strony. Zależy im przede wszystkim na tym, żeby każdy mógł pokochać swój samochód na nowo, poprzez zwiększenie jego osiągów.</p>
+                <p class="about__text">HP Factory, jako jedyna firma w Polsce, jest oficjalnym partnerem i dystrybutorem niemieckiej firmy DTE Systems — numer jeden w europie zajmującej się chiptuningiem oraz opracowywaniem produktów z nim związanych.</p>
+              </div>
+            </div>
+            <div class="about__row about__row-1">
+              <div class="about__row-left">
+                <div class="about__img-wrapper"><img class="about__img" src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title=""></div>
+                <div class="about__img-wrapper"><img class="about__img" src="./img/img-box-info.png" srcset="./img/img-box-info@2x.png 2x" alt="" title=""></div>
+              </div>
+              <div class="about__row-right">
+                <p class="about__subtitle">DTE Systems</p>
+                <p class="about__text">Firma HP Factory została założona przez pasjonatów motoryzacji, którzy całe swoje serce do samochodów wkładają w firmę, jej rozwój, a przede wszystkim obsługę klienta. Wywodzą się oni ze środowiska motorsportu, co powoduje, że znają tuning nawet z tej ekstremalnej strony. Zależy im przede wszystkim na tym, żeby każdy mógł pokochać swój samochód na nowo, poprzez zwiększenie jego osiągów.</p>
+                <p class="about__text">HP Factory, jako jedyna firma w Polsce, jest oficjalnym partnerem i dystrybutorem niemieckiej firmy DTE Systems — numer jeden w europie zajmującej się chiptuningiem oraz opracowywaniem produktów z nim związanych.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="footer__bar">
