Recode background image.

--- a/dest/contacts.html
+++ b/dest/contacts.html
@@ -109,7 +109,7 @@
     <div class="body body--start contacts">
       <!-- CONTACT :: START-->
       <section class="contact" id="contact">
-        <div class="contact__bg"></div>
+        <div class="section__bg section__bg--light"></div>
         <div class="c-grid">
           <div class="contact__wrapper">
             <div class="contact__row contact__row-0">
