--- a/dest/index.html
+++ b/dest/index.html
@@ -109,7 +109,7 @@
     <div class="body home">
       <!-- MAIN :: START-->
       <section class="main" id="main">
-        <div class="main__bg"></div>
+        <div class="section__bg section__bg--dark"></div>
         <div class="c-grid">
           <div class="main__wrapper">
             <div class="main__wrapper-left">
