--- a/dest/search.html
+++ b/dest/search.html
@@ -109,7 +109,7 @@
     <div class="body body--start search-page">
       <!-- BASE :: START-->
       <section class="base" id="base">
-        <div class="base__bg"></div>
+        <div class="section__bg section__bg--light"></div>
         <div class="c-grid c-grid--0">
           <div class="base__wrapper">
             <div class="base__row base__row-0">
