--- a/dest/404.html
+++ b/dest/404.html
@@ -108,7 +108,7 @@
     <!-- HEADER :: END-->
     <div class="body body--start not-found">
       <section class="notFound" id="notFound">
-        <div class="notFound__bg"></div>
+        <div class="section__bg section__bg--light"></div>
         <div class="c-grid">
           <div class="notFound__wrapper">
             <div class="notFound__img-wrap"><img class="notFound__img" src="./img/img-notfound.png" srcset="" alt="" title=""></div>
