--- a/dest/about.html
+++ b/dest/about.html
@@ -108,7 +108,7 @@
     <!-- HEADER :: END-->
     <div class="body body--start p-about">
       <section class="about" id="about">
-        <div class="about__bg"></div>
+        <div class="section__bg section__bg--light"></div>
         <div class="c-grid">
           <div class="about__wrapper">
             <h1 class="about__title">O nas</h1>
