Recode - section min-height with indent.

--- a/dest/404.html
+++ b/dest/404.html
@@ -107,7 +107,7 @@
     </header>
     <!-- HEADER :: END-->
     <div class="body body--start not-found">
-      <section class="notFound" id="notFound">
+      <section class="section notFound" id="notFound">
         <div class="section__bg section__bg--light"></div>
         <div class="c-grid">
           <div class="notFound__wrapper">
