--- a/dest/about.html
+++ b/dest/about.html
@@ -107,7 +107,7 @@
     </header>
     <!-- HEADER :: END-->
     <div class="body body--start p-about">
-      <section class="about" id="about">
+      <section class="section about" id="about">
         <div class="section__bg section__bg--light"></div>
         <div class="c-grid">
           <div class="about__wrapper">
