--- a/dest/basket.html
+++ b/dest/basket.html
@@ -106,7 +106,16 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body p-basket"></div>
+    <div class="body p-basket">
+      <!-- SECTION BASKET :: START-->
+      <section class="section basket" id="basket">
+        <div class="section__bg section__bg--light"></div>
+        <div class="c-grid">
+          <div class="basket__wrapper"></div>
+        </div>
+      </section>
+      <!-- SECTION BASKET :: END-->
+    </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="footer__bar">
