--- a/dest/index.html
+++ b/dest/index.html
@@ -108,7 +108,7 @@
     <!-- HEADER :: END-->
     <div class="body home">
       <!-- MAIN :: START-->
-      <section class="main" id="main">
+      <section class="section main" id="main">
         <div class="section__bg section__bg--dark"></div>
         <div class="c-grid">
           <div class="main__wrapper">
