--- a/dest/contacts.html
+++ b/dest/contacts.html
@@ -108,7 +108,7 @@
     <!-- HEADER :: END-->
     <div class="body body--start contacts">
       <!-- CONTACT :: START-->
-      <section class="contact" id="contact">
+      <section class="section contact" id="contact">
         <div class="section__bg section__bg--light"></div>
         <div class="c-grid">
           <div class="contact__wrapper">
